applicant 까지 완료

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,12 +54,12 @@
 							</span>
 							<div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown menu-rounded-0 py-lg-4 w-lg-225px">
 								<div class="menu-item">
-									<a class="menu-link py-3" href="../../demo4/dist/admin_user_users.html" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+									<a class="menu-link py-3" href="/admin/users" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 										<span class="menu-title">Users</span>
 									</a>
 								</div>
 								<div class="menu-item">
-									<a class="menu-link py-3" href="../../demo4/dist/admin_user_applicant.html" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+									<a class="menu-link py-3" href="/admin/users/applicants" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 										<span class="menu-title">Applicant</span>
 									</a>
 								</div>
@@ -113,12 +113,12 @@
 						</span>
 						<div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown menu-rounded-0 py-lg-4 w-lg-225px">
 							<div class="menu-item">
-								<a class="menu-link py-3" href="/admin/static/admin-payments" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+								<a class="menu-link py-3" href="/admin/static/payments" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 									<span class="menu-title">payments</span>
 								</a>
 							</div>
 							<div class="menu-item">
-								<a class="menu-link py-3" href="/admin/static/admin-transactions" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+								<a class="menu-link py-3" href="/admin/static/transactions" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 									<span class="menu-title">transaction</span>
 								</a>
 							</div>
@@ -181,7 +181,7 @@
 							</span>
 							<div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown menu-rounded-0 py-lg-4 w-lg-225px">
 								<div class="menu-item">
-									<a class="menu-link py-3" href="../../demo4/dist/admin_settings_coupon.html" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+									<a class="menu-link py-3" href="/admin/settings/coupon" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 										<span class="menu-title">Coupon</span>
 									</a>
 								</div>
