--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1708,17 +1708,19 @@
 							<div class="menu-item px-5">
 								<a href="../../demo4/dist/index.html" class="menu-link px-5">👹 수업구매 페이지</strong></strong> </a>
 							</div>
-							<div class="menu-item px-5">
+							<%# <div class="menu-item px-5">
 								<a href="../../demo4/dist/admin_user_users.html" class="menu-link px-5">switch to &nbsp;<strong>관리자</strong></strong> </a>
-							</div>
+							</div> %>
+							<%# TODO:: 해당 User의 uid 로 가지고 있는 학생 리스트를 전부 가져와야 할 것 같습니다 %>
 							<div class="menu-item px-5">
-								<a href="../../demo4/dist/student_class.html" class="menu-link px-5">switch to &nbsp;<strong>학생</strong></strong> </a>
+								<a href="../../demo4/dist/student_class.html" class="menu-link px-5">switch to &nbsp;<strong>학생1</strong></strong> </a>
 							</div>
-							<div class="menu-item px-5">
+							<%# <div class="menu-item px-5">
 								<a href="../../demo4/dist/teacher_class.html" class="menu-link px-5">switch to &nbsp;<strong>선생님</strong></strong> </a>
-							</div>
+							</div> %>
+							<%# TODO:: User의 Parent 페이지 %>
 							<div class="menu-item px-5">
-								<a href="../../demo4/dist/parents_student.html" class="menu-link px-5">switch to &nbsp;<strong>학부모</strong></strong> </a>
+								<a href="../../demo4/dist/parents_student.html" class="menu-link px-5">학부모 &nbsp;<strong> page</strong></strong> </a>
 							</div>
 							<div class="separator my-2"></div>
 							<!--end::Menu separator-->
