Student 를 만들고, 전체 폰트를 수정해보았습니다

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,11 @@
 	<meta property="og:site_name" content="" />
 	<meta property="og:image" content="">
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
- 
+ 	<%# begin::Fonts %>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+	<%# end::Fonts %>
 	  	
 	  		
 	<% if content_for?(:head) %>
@@ -45,7 +49,7 @@
 	  gtag('config', 'UA-217278797-1');
 	</script>	
   </head>
-  <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled toolbar-fixed aside-enabled aside-fixed" style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px">	
+  <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled toolbar-fixed aside-enabled aside-fixed" style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px; font-family: 'Urbanist', sans-serif !important;">	
 	<div class="d-flex flex-column flex-root">
 		<div class="page d-flex flex-row flex-column-fluid">
   			
