asset images changes url

--- a/app/views/student/student_home.html.erb
+++ b/app/views/student/student_home.html.erb
@@ -19,7 +19,7 @@
                                     <!--begin: Pic-->
                                     <div class="me-7 mb-4">
                                         <div class="symbol symbol-100px symbol-circle symbol-lg-160px symbol-fixed position-relative">
-                                            <img src="assets/media/ysmeta/img_student.jpeg" alt="image">
+                                            <img src="/images/ysmeta/img_student.jpeg" alt="image">
                                         </div>
                                     </div>
                                     <!--end::Pic-->
@@ -338,7 +338,7 @@
                                         <div class="card-title m-0">
                                             <!--begin::Avatar-->
                                             <div class="symbol symbol-50px w-50px bg-light">
-                                                <img src="assets/media/ysmeta/img_01.jpg" alt="image" class="">
+                                                <img src="/images/ysmeta/img_01.jpg" alt="image" class="">
                                             </div>
                                             <!--end::Avatar-->
                                         </div>
@@ -383,12 +383,12 @@
                                         <div class="symbol-group symbol-hover">
                                             <!--begin::User-->
                                             <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Emma Smith">
-                                                <img alt="Pic" src="assets/media/avatars/150-1.jpg">
+                                                <img alt="Pic" src="/images/avatars/150-1.jpg">
                                             </div>
                                             <!--begin::User-->
                                             <!--begin::User-->
                                             <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Rudy Stone">
-                                                <img alt="Pic" src="assets/media/avatars/150-2.jpg">
+                                                <img alt="Pic" src="/images/avatars/150-2.jpg">
                                             </div>
                                             <!--begin::User-->
                                             <!--begin::User-->
@@ -415,7 +415,7 @@
                                         <div class="card-title m-0">
                                             <!--begin::Avatar-->
                                             <div class="symbol symbol-50px w-50px bg-light">
-                                                <img src="assets/media/ysmeta/img_01.jpg" alt="image" class="">
+                                                <img src="/images/ysmeta/img_01.jpg" alt="image" class="">
                                             </div>
                                             <!--end::Avatar-->
                                         </div>
@@ -467,7 +467,7 @@
                                             <!--begin::User-->
                                             <!--begin::User-->
                                             <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Brian Cox">
-                                                <img alt="Pic" src="assets/media/avatars/150-4.jpg">
+                                                <img alt="Pic" src="/images/avatars/150-4.jpg">
                                             </div>
                                             <!--begin::User-->
                                         </div>
@@ -489,7 +489,7 @@
                                         <div class="card-title m-0">
                                             <!--begin::Avatar-->
                                             <div class="symbol symbol-50px w-50px bg-light">
-                                                <img src="assets/media/ysmeta/img_01.jpg" alt="image" class="">
+                                                <img src="/images/ysmeta/img_01.jpg" alt="image" class="">
                                             </div>
                                             <!--end::Avatar-->
                                         </div>
@@ -539,7 +539,7 @@
                                             <!--begin::User-->
                                             <!--begin::User-->
                                             <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Brian Cox">
-                                                <img alt="Pic" src="assets/media/avatars/150-4.jpg">
+                                                <img alt="Pic" src="/images/avatars/150-4.jpg">
                                             </div>
                                             <!--begin::User-->
                                         </div>
@@ -1087,7 +1087,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px symbol-circle">
-                                                                                <img alt="Pic" src="assets/media/avatars/150-1.jpg">
+                                                                                <img alt="Pic" src="/images/avatars/150-1.jpg">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1143,7 +1143,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px symbol-circle">
-                                                                                <img alt="Pic" src="assets/media/avatars/150-26.jpg">
+                                                                                <img alt="Pic" src="/images/avatars/150-26.jpg">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1171,7 +1171,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px symbol-circle">
-                                                                                <img alt="Pic" src="assets/media/avatars/150-4.jpg">
+                                                                                <img alt="Pic" src="/images/avatars/150-4.jpg">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1199,7 +1199,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px symbol-circle">
-                                                                                <img alt="Pic" src="assets/media/avatars/150-15.jpg">
+                                                                                <img alt="Pic" src="/images/avatars/150-15.jpg">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1255,7 +1255,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px symbol-circle">
-                                                                                <img alt="Pic" src="assets/media/avatars/150-8.jpg">
+                                                                                <img alt="Pic" src="/images/avatars/150-8.jpg">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1339,7 +1339,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px symbol-circle">
-                                                                                <img alt="Pic" src="assets/media/avatars/150-6.jpg">
+                                                                                <img alt="Pic" src="/images/avatars/150-6.jpg">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1395,7 +1395,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px symbol-circle">
-                                                                                <img alt="Pic" src="assets/media/avatars/150-7.jpg">
+                                                                                <img alt="Pic" src="/images/avatars/150-7.jpg">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1451,7 +1451,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px symbol-circle">
-                                                                                <img alt="Pic" src="assets/media/avatars/150-17.jpg">
+                                                                                <img alt="Pic" src="/images/avatars/150-17.jpg">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1507,7 +1507,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px symbol-circle">
-                                                                                <img alt="Pic" src="assets/media/avatars/150-10.jpg">
+                                                                                <img alt="Pic" src="/images/avatars/150-10.jpg">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1803,7 +1803,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px">
-                                                                                <img src="assets/media/svg/files/pdf.svg" alt="icon">
+                                                                                <img src="/images/svg/files/pdf.svg" alt="icon">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1830,7 +1830,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px">
-                                                                                <img src="assets/media/svg/files/doc.svg" alt="icon">
+                                                                                <img src="/images/svg/files/doc.svg" alt="icon">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1857,7 +1857,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px">
-                                                                                <img src="assets/media/svg/files/css.svg" alt="icon">
+                                                                                <img src="/images/svg/files/css.svg" alt="icon">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1884,7 +1884,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px">
-                                                                                <img src="assets/media/svg/files/ai.svg" alt="icon">
+                                                                                <img src="/images/svg/files/ai.svg" alt="icon">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1911,7 +1911,7 @@
                                                                         <div class="d-flex align-items-center">
                                                                             <!--begin::Avatar-->
                                                                             <div class="symbol symbol-35px">
-                                                                                <img src="assets/media/svg/files/tif.svg" alt="icon">
+                                                                                <img src="/images/svg/files/tif.svg" alt="icon">
                                                                             </div>
                                                                             <!--end::Avatar-->
                                                                             <!--begin::Details-->
@@ -1993,7 +1993,7 @@
                                                             <!--end::Actions-->
                                                             <!--begin::Illustration-->
                                                             <div class="text-center px-4">
-                                                                <img src="assets/media/illustrations/dozzy-1/9.png" alt="" class="mww-100 mh-350px">
+                                                                <img src="/images/illustrations/dozzy-1/9.png" alt="" class="mww-100 mh-350px">
                                                             </div>
                                                             <!--end::Illustration-->
                                                         </div>
@@ -2441,7 +2441,7 @@
                                                         <!--end::Actions-->
                                                         <!--begin::Illustration-->
                                                         <div class="text-center px-4">
-                                                            <img src="assets/media/illustrations/dozzy-1/20.png" alt="" class="mw-100 mh-300px">
+                                                            <img src="/images/illustrations/dozzy-1/20.png" alt="" class="mw-100 mh-300px">
                                                         </div>
                                                         <!--end::Illustration-->
                                                     </div>
