--- a/app/views/student/student_home.html.erb
+++ b/app/views/student/student_home.html.erb
@@ -1,147 +1,83 @@
-<script>
-    var calendarEl = document.getElementById("kt_docs_fullcalendar_selectable");
+<head>
+    <link href='/full-calendar/main.css' rel='stylesheet' />
+    <script src='/full-calendar/main.js'></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const calendarEl = document.getElementById('calendar');
 
-    var calendar = new FullCalendar.Calendar(calendarEl, {
-        headerToolbar: {
-            left: "prev,next today",
-            center: "title",
-            right: "dayGridMonth,timeGridWeek,timeGridDay"
-        },
-        initialDate: "2020-09-12",
-        navLinks: true, // can click day/week names to navigate views
-        selectable: true,
-        selectMirror: true,
-
-        // Create new event
-        select: function (arg) {
-            Swal.fire({
-                html: "<div class='mb-7'>Create new event?</div><div class='fw-bold mb-5'>Event Name:</div><input type='text' class='form-control' name='event_name' />",
-                icon: "info",
-                showCancelButton: true,
-                buttonsStyling: false,
-                confirmButtonText: "Yes, create it!",
-                cancelButtonText: "No, return",
-                customClass: {
-                    confirmButton: "btn btn-primary",
-                    cancelButton: "btn btn-active-light"
-                }
-            }).then(function (result) {
-                if (result.value) {
-                    var title = document.querySelector("input[name='event_name']").value;
-                    if (title) {
-                        calendar.addEvent({
-                            title: title,
-                            start: arg.start,
-                            end: arg.end,
-                            allDay: arg.allDay
-                        })
-                    }
-                    calendar.unselect()
-                } else if (result.dismiss === "cancel") {
-                    Swal.fire({
-                        text: "Event creation was declined!.",
-                        icon: "error",
-                        buttonsStyling: false,
-                        confirmButtonText: "Ok, got it!",
-                        customClass: {
-                            confirmButton: "btn btn-primary",
-                        }
-                    });
-                }
-            });
-        },
-
-        // Delete event
-        eventClick: function (arg) {
-            Swal.fire({
-                text: "Are you sure you want to delete this event?",
-                icon: "warning",
-                showCancelButton: true,
-                buttonsStyling: false,
-                confirmButtonText: "Yes, delete it!",
-                cancelButtonText: "No, return",
-                customClass: {
-                    confirmButton: "btn btn-primary",
-                    cancelButton: "btn btn-active-light"
-                }
-            }).then(function (result) {
-                if (result.value) {
-                    arg.event.remove()
-                } else if (result.dismiss === "cancel") {
-                    Swal.fire({
-                        text: "Event was not deleted!.",
-                        icon: "error",
-                        buttonsStyling: false,
-                        confirmButtonText: "Ok, got it!",
-                        customClass: {
-                            confirmButton: "btn btn-primary",
-                        }
-                    });
-                }
-            });
-        },
-        editable: true,
-        dayMaxEvents: true, // allow "more" link when too many events
-        events: [
-            {
-                title: "All Day Event",
-                start: "2020-09-01"
+            const calendar = new FullCalendar.Calendar(calendarEl, {
+            headerToolbar: {
+                left: 'prevYear,prev,next,nextYear today',
+                center: 'title',
+                right: 'dayGridMonth,dayGridWeek,dayGridDay'
             },
-            {
-                title: "Long Event",
-                start: "2020-09-07",
-                end: "2020-09-10"
-            },
-            {
+            initialDate: '2022-07-13',
+            navLinks: true, // can click day/week names to navigate views
+            editable: true,
+            dayMaxEvents: true, // allow "more" link when too many events
+            events: [
+                {
+                title: 'All Day Event',
+                start: '2022-07-01'
+                },
+                {
+                title: 'Long Event',
+                start: '2022-07-07',
+                end: '2022-07-10'
+                },
+                {
                 groupId: 999,
-                title: "Repeating Event",
-                start: "2020-09-09T16:00:00"
-            },
-            {
+                title: 'Repeating Event',
+                start: '2022-07-07T16:00:00'
+                },
+                {
                 groupId: 999,
-                title: "Repeating Event",
-                start: "2020-09-16T16:00:00"
-            },
-            {
-                title: "Conference",
-                start: "2020-09-11",
-                end: "2020-09-13"
-            },
-            {
-                title: "Meeting",
-                start: "2020-09-12T10:30:00",
-                end: "2020-09-12T12:30:00"
-            },
-            {
-                title: "Lunch",
-                start: "2020-09-12T12:00:00"
-            },
-            {
-                title: "Meeting",
-                start: "2020-09-12T14:30:00"
-            },
-            {
-                title: "Happy Hour",
-                start: "2020-09-12T17:30:00"
-            },
-            {
-                title: "Dinner",
-                start: "2020-09-12T20:00:00"
-            },
-            {
-                title: "Birthday Party",
-                start: "2020-09-13T07:00:00"
-            },
-            {
-                title: "Click for Google",
-                url: "http://google.com/",
-                start: "2020-09-28"
-            }
-        ]
-    });
+                title: 'Repeating Event',
+                start: '2022-07-16T16:00:00'
+                },
+                {
+                title: 'Conference',
+                start: '2022-07-11',
+                end: '2022-07-13'
+                },
+                {
+                title: 'Meeting',
+                start: '2022-07-12T10:30:00',
+                end: '2022-07-12T12:30:00'
+                },
+                {
+                title: 'Lunch',
+                start: '2022-07-12T12:00:00'
+                },
+                {
+                title: 'Meeting',
+                start: '2022-07-12T14:30:00'
+                },
+                {
+                title: 'Happy Hour',
+                start: '2022-07-12T17:30:00'
+                },
+                {
+                title: 'Dinner',
+                start: '2022-07-12T20:00:00'
+                },
+                {
+                title: 'Birthday Party',
+                start: '2022-07-13T07:00:00'
+                },
+                {
+                title: 'Click for Google',
+                url: 'http://google.com/',
+                start: '2022-07-28'
+                }
+            ]
+            });
 
-    calendar.render();
-</script>
+            calendar.render();
+        });
+
+    </script>
+</head>
 <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed aside-fixed aside-secondary-disabled">
     
     <!--begin::Main-->
@@ -851,34 +787,21 @@
 
 	
                                 <div class="card">
-                                    <!--begin::Card header-->
                                     <div class="card-header">
                                         <h2 class="card-title fw-bolder">Calendar</h2>
                                         <div class="card-toolbar">
                                             <button class="btn btn-flex btn-primary" data-kt-calendar="add">
-                                            <!--begin::Svg Icon | path: icons/duotune/arrows/arr075.svg-->
                                             <span class="svg-icon svg-icon-2">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                                                     <rect opacity="0.5" x="11.364" y="20.364" width="16" height="2" rx="1" transform="rotate(-90 11.364 20.364)" fill="black" />
                                                     <rect x="4.36396" y="11.364" width="16" height="2" rx="1" fill="black" />
                                                 </svg>
                                             </span>
-                                            <!--end::Svg Icon-->Add Event</button>
+                                            Add Event</button>
                                         </div>
                                     </div>
-                                    <!--end::Card header-->
-                                    <!--begin::Card body-->
-                                    <div class="card-body">
-                                        <!--begin::Calendar-->
-                                        <div id="kt_calendar_app"></div>
-                                        <!--end::Calendar-->
-                                    </div>
-                                    <!--end::Card body-->
+                                    <div id="calendar"></div>
                                 </div>
-                                <!--end::Card-->
-
-
-                                <div id="kt_docs_fullcalendar_selectable"></div>
 
 
                             </div>
@@ -894,5 +817,5 @@
         <!--end::Page-->
     </div>
     <!--end::Root-->
-
+    
 </body>
