--- a/app/views/student/student_home.html.erb
+++ b/app/views/student/student_home.html.erb
@@ -426,7 +426,7 @@
                                     <!--end::Details-->
 
                                     <!--begin::Navs-->
-                                    <ul class="nav nav-stretch nav-line-tabs nav-line-tabs-2x border-transparent fs-5 fw-bolder">
+                                    <ul class="nav nav-stretch nav-line-tabs nav-line-tabs-2x border-transparent fs-5 fw-bolder" style="position: absolute; bottom: 0px;">
                                         
                                         <li class="nav-item">
                                             <a class="nav-link text-active-primary ms-0 me-10 py-5 active" data-bs-toggle="tab" href="#student_class">Class</a>
