--- a/app/views/student/student_home.html.erb
+++ b/app/views/student/student_home.html.erb
@@ -181,7 +181,7 @@
                             <div class="card col-sm-7">
                                 <div class="card-body pt-9 pb-0">
                                     <!--begin::Details-->
-                                    <div class="d-flex flex-wrap flex-sm-nowrap">
+                                    <div class="d-flex flex-wrap flex-sm-nowrap" style="margin-bottom:50px">
                                         <!--begin: Pic-->
                                         <div class="me-7 mb-4">
                                             <div class="symbol symbol-100px symbol-circle symbol-lg-160px symbol-fixed position-relative">
