Full calendar view 를 밖으로 빼서 작업을 함

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -99,6 +99,11 @@
 														<span class="menu-title">My page</span>
 													</a>
 											</div>
+											<div class="menu-item">
+												<a class="menu-link py-3" href="/teacher/mycalendar/<%=@user.id%>" title="My schedule calendar" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+													<span class="menu-title">My Schedule calendar</span>
+												</a>
+											</div>
 										<% end %>
 									</div>
 								</div>
