--- a/app/views/teacher/mypage.html.erb
+++ b/app/views/teacher/mypage.html.erb
@@ -2111,8 +2111,7 @@
 												<thead>
 													<!--begin::Table row-->
 													<tr class="text-start text-muted fw-bolder fs-7 text-uppercase gs-0">
-														<th class="w-10px pe-2 sorting_disabled" rowspan="1" colspan="1" aria-label="
-														" style="width: 29.25px;">
+														<th class="w-10px pe-2 sorting_disabled" rowspan="1" colspan="1" aria-label="" style="width: 29.25px;">
 															<div class="form-check form-check-sm form-check-custom form-check-solid me-3">
 																<input class="form-check-input" type="checkbox" data-kt-check="true" data-kt-check-target="#kt_table_users .form-check-input" value="1">
 															</div>
@@ -2188,7 +2187,7 @@
 															<!--end::Menu-->
 														</td>
 														<!--end::Action=-->
-|													</tr>
+													</tr>
 												</tbody>
 												<!--end::Table body-->
 											</table></div><div class="row"><div class="col-sm-12 col-md-5 d-flex align-items-center justify-content-center justify-content-md-start"></div><div class="col-sm-12 col-md-7 d-flex align-items-center justify-content-center justify-content-md-end"><div class="dataTables_paginate paging_simple_numbers" id="kt_table_users_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="kt_table_users_previous"><a href="#" aria-controls="kt_table_users" data-dt-idx="0" tabindex="0" class="page-link"><i class="previous"></i></a></li><li class="paginate_button page-item active"><a href="#" aria-controls="kt_table_users" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="kt_table_users" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="kt_table_users" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item next" id="kt_table_users_next"><a href="#" aria-controls="kt_table_users" data-dt-idx="4" tabindex="0" class="page-link"><i class="next"></i></a></li></ul></div></div></div></div>
