어드민 티쳐 부분과 클래스 티쳐 부분들 href 연결 완료, student - home 부분 달력 ui 수정

--- a/app/views/class/class_bidding.html.erb
+++ b/app/views/class/class_bidding.html.erb
@@ -1929,7 +1929,8 @@
 																<td class="d-flex align-items-center">
 																	<!--begin:: Avatar -->
 																	<div class="symbol  symbol-50px overflow-hidden me-3">
-																		<a href="../../demo4/dist/admin_school_class_view.html">
+                                                                        <%# TODO:: 해당 클래스의 ID 값이 들어가도록 바꿔야 함 %>
+																		<a href="/admin/class/class-detail/3">
 																			<div class="symbol-label fs-3 bg-light-danger text-danger">BH</div>
 																		</a>
 																	</div>
@@ -1937,7 +1938,8 @@
 
 																	<!--begin::User details-->
 																	<div class="d-flex flex-column">
-																		<a href="../../demo4/dist/admin_school_class_view.html" class="text-gray-800 text-hover-primary mb-1">5학년 A1 - BH2 북클럽</a>
+                                                                        <%# TODO:: 해당 클래스의 ID 값이 들어가도록 바꿔야 함 %>
+																		<a href="/admin/class/class-detail/3" class="text-gray-800 text-hover-primary mb-1">5학년 A1 - BH2 북클럽</a>
 																		<span class="fw-normal fs-7 ">2022.08.01 ~ 2022.09.01 </span>
 																	</div>
 																	<!--begin::User details-->
@@ -2770,7 +2772,8 @@
 														<td class="d-flex align-items-center">
 															<!--begin:: Avatar -->
 															<div class="symbol  symbol-50px overflow-hidden me-3">
-																<a href="../../demo4/dist/admin_school_class_view.html">
+                                                                <%# TODO:: 해당 클래스의 ID 값이 들어가도록 바꿔야 함 %>
+																<a href="/admin/class/class-detail/3">
 																	<div class="symbol-label fs-3 bg-light-danger text-danger">BH</div>
 																</a>
 															</div>
@@ -2778,7 +2781,8 @@
 
 															<!--begin::User details-->
 															<div class="d-flex flex-column">
-																<a href="../../demo4/dist/admin_school_class_view.html" class="text-gray-800 text-hover-primary mb-1">5학년 A1 - BH2 북클럽</a>
+                                                                <%# TODO:: 해당 클래스의 ID 값이 들어가도록 바꿔야 함 %>
+																<a href="/admin/class/class-detail/3" class="text-gray-800 text-hover-primary mb-1">5학년 A1 - BH2 북클럽</a>
 																<span class="fs-8">Jun 17, 2022</span>
 															</div>
 															<!--begin::User details-->
