--- a/app/views/class/class_list.html.erb
+++ b/app/views/class/class_list.html.erb
@@ -1236,7 +1236,8 @@
 															<!--end::Avatar-->
 															<!--begin::User details-->
 															<div class="d-flex flex-column">
-																<a href="../../demo4/dist/admin_user_users_teacher.html" class="text-gray-800 text-hover-primary mb-1">Dr. crazy Andrew</a>
+															<%# TODO:: 선생님 teacher id 로 넘어가게끔 해야만 합니다 %>
+																<a href="/teacher/mypage/1" class="text-gray-800 text-hover-primary mb-1">Dr. crazy Andrew</a>
 																<span>max@kt.com</span>
 															</div>
 															<!--begin::User details-->
@@ -2057,7 +2058,7 @@
 														<td class="d-flex align-items-center">
 															<!--begin:: Avatar -->
 															<div class="symbol  symbol-50px overflow-hidden me-3">
-																<a href="../../demo4/dist/admin_school_class_view.html">
+																<a href="/admin/class/class-detail/1">
 																	<div class="symbol-label fs-3 bg-light-danger text-danger">BH</div>
 																</a>
 															</div>
@@ -2588,7 +2589,7 @@
 														<td class="d-flex align-items-center">
 															<!--begin:: Avatar -->
 															<div class="symbol  symbol-50px overflow-hidden me-3">
-																<a href="../../demo4/dist/admin_school_class_view.html">
+																<a href="/admin/class/class-detail/1">
 																	<div class="symbol-label fs-3 bg-light-danger text-danger">BH</div>
 																</a>
 															</div>
@@ -2596,7 +2597,8 @@
 
 															<!--begin::User details-->
 															<div class="d-flex flex-column">
-																<a href="../../demo4/dist/admin_school_class_view.html" class="text-gray-800 text-hover-primary mb-1">5학년 A1 - BH2 북클럽</a>
+																<a href="/admin/class/class-detail/1" class="text-gray-800 text-hover-primary mb-1">5학년 A1 - BH2 북클럽</a>
+																<%# <a href="../../demo4/dist/admin_school_class_view.html" class="text-gray-800 text-hover-primary mb-1">5학년 A1 - BH2 북클럽</a> %>
 																<span class="fs-8">Jun 17, 2022</span>
 															</div>
 															<!--begin::User details-->
