--- a/app/views/teacher/class_teacher_calendar.html.erb
+++ b/app/views/teacher/class_teacher_calendar.html.erb
@@ -220,7 +220,7 @@ License: For each use you must have a valid license purchased only from above li
 										<div class="card-header card-header-stretch border-bottom border-gray-200">
 											<!--begin::Title-->
 											<div class="card-title">
-												<h3 class="fw-bolder m-0">My Schedule</h3>
+												<h3 class="fw-bolder m-0">Schedule</h3>
 											</div>
 											<!--end::Title-->
 											<!--begin::Toolbar-->
