헤더 순서 변경

--- a/app/views/class/class_list.html.erb
+++ b/app/views/class/class_list.html.erb
@@ -125,7 +125,7 @@
 													
 													<!--begin::Add user-->
 													<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal_add_shedule">
-													Add Schedule1 </button>
+													Add Schedule </button>
 													<!--end::Add user-->
 												</div>
 												<!--end::Toolbar-->
