--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,7 +30,11 @@
 			<!--begin::Page title-->
 			<div class="page-title d-flex flex-column align-items-start justify-content-center flex-wrap me-lg-20 pb-2 pb-lg-0" data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', lg: '#kt_header_wrapper'}">
 				<!--begin::Heading-->
-				<h1 class="text-dark fw-bolder my-1 fs-3 lh-1">Soar</h1>
+				<h1 class="text-dark fw-bolder my-1 fs-3 lh-1">
+					<a href="/" style="color:black">
+						Soar
+					</a>
+				</h1>
 				<!--end::Heading-->
 			</div>
 			<!--end::Page title=-->
@@ -43,14 +47,7 @@
 				<div class="header-menu align-items-stretch" data-kt-drawer="true" data-kt-drawer-name="header-menu" data-kt-drawer-activate="{default: true, lg: false}" data-kt-drawer-overlay="true" data-kt-drawer-width="{default:'200px', '300px': '250px'}" data-kt-drawer-direction="end" data-kt-drawer-toggle="#kt_header_menu_mobile_toggle" data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_body', lg: '#kt_header_nav'}">
 					<!--begin::Menu 헤더 메뉴-->
 					<div class="menu menu-lg-rounded menu-column menu-lg-row menu-state-bg menu-title-gray-600 menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-400 fw-bold fs-6 my-5 my-lg-0 align-items-stretch" id="#kt_header_menu" data-kt-menu="true">
-						<%# Home 탭 %>
-						<div data-kt-menu-trigger="click" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion me-lg-1">
-							<div class="menu-item">
-								<a class="menu-link py-3" href="/" title="Move to MyPage" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-									<span class="menu-title">Home</span>
-								</a>
-							</div>
-						</div>
+						
 
 
 						<%# 로그인 한 상태 %>
@@ -143,18 +140,18 @@
 												</span>
 											</a>
 										</div>
-										<div class="menu-item">
+										<%# <div class="menu-item">
 											<a class="menu-link py-3" href="/admin/class/class-bidding" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 												<span class="menu-title">Bidding
 													<span class="fs-lg-9 badge badge-danger px-2 py-1 ms-2">New</span>
 												</span>
 											</a>
-										</div>
-										<div class="menu-item">
+										</div> %>
+										<%# <div class="menu-item">
 											<a class="menu-link py-3" href="/teacher/class-teacher" title="Class - teacher calendar" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 												<span class="menu-title">Class Teacher Calendar</span>
 											</a>
-										</div>
+										</div> %>
 										<div class="menu-item">
 											<a class="menu-link py-3" href="/admin/homework/homwork-list" title="Build your layout, preview and export HTML for server side integration" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 												<span class="menu-title">Homework</span>
@@ -182,12 +179,36 @@
 									<div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown menu-rounded-0 py-lg-4 w-lg-225px">
 										<div class="menu-item">
 											<a class="menu-link py-3" href="/admin/static/payments" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-												<span class="menu-title">payments</span>
+												<span class="menu-title">tuition</span>
 											</a>
 										</div>
 										<div class="menu-item">
 											<a class="menu-link py-3" href="/admin/static/transactions" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 												<span class="menu-title">transaction</span>
+											</a>
+										</div>
+									</div>
+								</div>
+								<%# Comunity 탭 %>
+								<div data-kt-menu-trigger="click" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion me-lg-1">
+									<span class="menu-link py-3 ">
+										<span class="menu-title">Community</span>
+										<span class="menu-arrow d-lg-none"></span>
+									</span>
+									<div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown menu-rounded-0 py-lg-4 w-lg-225px">
+										<div class="menu-item">
+											<a class="menu-link py-3" href="/admin/community/qna" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+												<span class="menu-title">Q & A</span>
+											</a>
+										</div>
+										<div class="menu-item">
+											<a class="menu-link py-3" href="/admin/community/review" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+												<span class="menu-title">review</span>
+											</a>
+										</div>
+										<div class="menu-item">
+											<a class="menu-link py-3" href="/admin/community/review" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+												<span class="menu-title">talk</span>
 											</a>
 										</div>
 									</div>
@@ -225,25 +246,6 @@
 											</a>
 										</div>
 										
-									</div>
-								</div>
-								<%# Comunity 탭 %>
-								<div data-kt-menu-trigger="click" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion me-lg-1">
-									<span class="menu-link py-3 ">
-										<span class="menu-title">Community</span>
-										<span class="menu-arrow d-lg-none"></span>
-									</span>
-									<div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown menu-rounded-0 py-lg-4 w-lg-225px">
-										<div class="menu-item">
-											<a class="menu-link py-3" href="/admin/community/qna" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-												<span class="menu-title">Q & A</span>
-											</a>
-										</div>
-										<div class="menu-item">
-											<a class="menu-link py-3" href="/admin/community/review" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
-												<span class="menu-title">review</span>
-											</a>
-										</div>
 									</div>
 								</div>
 							<% end %>
