--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -788,9 +788,7 @@
 												<!--begin::Table head-->
 												<thead>
 													<!--begin::Table row-->
-													<tr class="text-start text-muted fw-bolder fs-7 text-uppercase gs-0"><th class="w-10px pe-2 sorting_disabled" rowspan="1" colspan="1" aria-label="
-															
-														" style="width: 29.25px;">
+													<tr class="text-start text-muted fw-bolder fs-7 text-uppercase gs-0"><th class="w-10px pe-2 sorting_disabled" rowspan="1" colspan="1" aria-label="" style="width: 29.25px;">
 															<div class="form-check form-check-sm form-check-custom form-check-solid me-3">
 																<input class="form-check-input" type="checkbox" data-kt-check="true" data-kt-check-target="#kt_table_users .form-check-input" value="1">
 															</div>
@@ -1138,7 +1136,7 @@
 														<!--end::Table head-->
 														<!--begin::Table body-->
 														<tbody class="text-gray-600 fw-bold">
-															<% @users.each do |user|%>
+															<% @parents.each do |parent|%>
 																<tr class="odd">
 																	<!--begin::Checkbox-->
 																	<td>
@@ -1147,13 +1145,30 @@
 																		</div>
 																	</td>
 																	<!--end::Checkbox-->
-																	<!--begin::User=-->
+																	<!--begin::Parent=-->
 																	<td class="d-flex align-items-center">
 																		<!--begin:: Avatar -->
 																		<div class="symbol symbol-circle">
-																		<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
-																			<a href="/admin/users/parent-detail/1">
-																				<div class="symbol-label fs-3 bg-light-success text-success"><%=user.name[0..0]%> </div>
+																		<%# TODO:: User ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
+																			<a href="/admin/users/parent-detail/<%= parent.id%>">
+																				<% if (parent.name[0..0].ord >= 65) && (parent.name[0..0].ord < 70)%>
+																					<div class="symbol-label fs-3 bg-light-danger text-warning"><%=parent.name[0..0]%> </div>
+																				<% end %>
+																				<% if (parent.name[0..0].ord >= 70) && (parent.name[0..0].ord < 75)%>
+																					<div class="symbol-label fs-3 bg-light-success text-success"><%=parent.name[0..0]%> </div>
+																				<% end %>
+																				<% if (parent.name[0..0].ord >= 75) && (parent.name[0..0].ord < 80)%>
+																					<div class="symbol-label fs-3 bg-light-primary text-success"><%=parent.name[0..0]%> </div>
+																				<% end %>
+																				<% if (parent.name[0..0].ord >= 80) && (parent.name[0..0].ord < 85)%>
+																					<div class="symbol-label fs-3 bg-light-info text-info"><%=parent.name[0..0]%> </div>
+																				<% end %>
+																				<% if (parent.name[0..0].ord >= 85) && (parent.name[0..0].ord <= 90)%>
+																					<div class="symbol-label fs-3 bg-light-secondary text-success"><%=parent.name[0..0]%> </div>
+																				<% end %>
+																				<% if (parent.name[0..0].ord >= 91)%>
+																					<div class="symbol-label fs-3 bg-light-danger text-danger"><%=parent.name[0..0]%> </div>
+																				<% end %>
 																			</a>
 																		</div>
 																		<!--end::Avatar-->
@@ -1161,8 +1176,8 @@
 																		<!--begin::User details-->
 																		<div class="d-flex flex-column" style="margin-left:20px">
 																		<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																			<a href="/admin/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1"><%=user.name%> </a>
-																			<span class="fs-8"><%=user.email%></span>
+																			<a href="/admin/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1"><%=parent.name%> </a>
+																			<span class="fs-8"><%=parent.email%></span>
 																		</div>
 																		<!--begin::User details-->
 																	</td>
@@ -2123,70 +2138,83 @@
 													<!--end::Table head-->
 													<!--begin::Table body-->
 													<tbody class="text-gray-600 fw-bold">
-														
-													
-														<tr class="odd">
-															<!--begin::Checkbox-->
-															<td>
-																<div class="form-check form-check-sm form-check-custom form-check-solid">
-																	<input class="form-check-input" type="checkbox" value="1">
-																</div>
-															</td>
-															<!--end::Checkbox-->
-															<!--begin::User=-->
-															<td class="d-flex align-items-center">
-																<!--begin:: Avatar -->
-																<div class="symbol symbol-circle">
-																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
-																	<a href="/admin/users/parent-detail/1">
-																		<div class="symbol-label">
-																			<img src="images/ysmeta/img_teacher.jpeg" alt="Max Smith" class="w-100">
+														<% @teachers.each do |teacher|%>
+															<tr class="odd">
+																<!--begin::Checkbox-->
+																<td>
+																	<div class="form-check form-check-sm form-check-custom form-check-solid">
+																		<input class="form-check-input" type="checkbox" value="1">
+																	</div>
+																</td>
+																<!--end::Checkbox-->
+																<!--begin::User=-->
+																<td class="d-flex align-items-center">
+																	<!--begin:: Avatar -->
+																	<div class="symbol symbol-circle">
+																		<% if (teacher.name[0..0].ord >= 65) && (teacher.name[0..0].ord < 70)%>
+																			<div class="symbol-label fs-3 bg-light-danger text-warning"><%=teacher.name[0..0]%> </div>
+																		<% end %>
+																		<% if (teacher.name[0..0].ord >= 70) && (teacher.name[0..0].ord < 75)%>
+																			<div class="symbol-label fs-3 bg-light-success text-success"><%=teacher.name[0..0]%> </div>
+																		<% end %>
+																		<% if (teacher.name[0..0].ord >= 75) && (teacher.name[0..0].ord < 80)%>
+																			<div class="symbol-label fs-3 bg-light-primary text-success"><%=teacher.name[0..0]%> </div>
+																		<% end %>
+																		<% if (teacher.name[0..0].ord >= 80) && (teacher.name[0..0].ord < 85)%>
+																			<div class="symbol-label fs-3 bg-light-info text-info"><%=teacher.name[0..0]%> </div>
+																		<% end %>
+																		<% if (teacher.name[0..0].ord >= 85) && (teacher.name[0..0].ord <= 90)%>
+																			<div class="symbol-label fs-3 bg-light-secondary text-success"><%=teacher.name[0..0]%> </div>
+																		<% end %>
+																		<% if (teacher.name[0..0].ord >= 91)%>
+																			<div class="symbol-label fs-3 bg-light-danger text-danger"><%=teacher.name[0..0]%> </div>
+																		<% end %>
+																	</div>
+																	<!--end::Avatar-->
+																	<!--begin::User details-->
+																	<div class="d-flex flex-column"  style="margin-left:20px">
+																		<a href="/admin/users/teacher-detail/<%=teacher.id%>" class="text-gray-800 text-hover-primary mb-1"><%=teacher.name%></a>
+																		<%# <span></span> %>
+																		<a href="mailto:<%=teacher.email%>" class="text-muted text-hover-primary"><%=teacher.email%></a>
+																	</div>
+																	<!--begin::User details-->
+																</td>
+																<%# TODO:: 레벨들을 가져옵지다. 어떻게 가져올 지에 대해서는 String 으로 전부 때릴 것인지, 방식을 정해야 할 것 같습니다 %>
+																<td>BM1,</td>
+																<%# TODO:: Review 를 전부 들고 와서, 해당 정보들에서 average 를 내려서 보는 것을 찾아야 합니다 %>
+																<td>3.7</td>
+																<td>- Major: Socio cultural anthropology - Certificate: Teaching Certificate</td>
+																<td>
+																	<a href="#">Zoom</a>
+																</td>
+																<td class="text-end">
+																	<a href="#" class="btn btn-light btn-active-light-primary btn-sm" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">Actions
+																	<!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg-->
+																	<span class="svg-icon svg-icon-5 m-0">
+																		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+																			<path d="M11.4343 12.7344L7.25 8.55005C6.83579 8.13583 6.16421 8.13584 5.75 8.55005C5.33579 8.96426 5.33579 9.63583 5.75 10.05L11.2929 15.5929C11.6834 15.9835 12.3166 15.9835 12.7071 15.5929L18.25 10.05C18.6642 9.63584 18.6642 8.96426 18.25 8.55005C17.8358 8.13584 17.1642 8.13584 16.75 8.55005L12.5657 12.7344C12.2533 13.0468 11.7467 13.0468 11.4343 12.7344Z" fill="black"></path>
+																		</svg>
+																	</span>
+																	<!--end::Svg Icon--></a>
+																	<!--begin::Menu-->
+																	<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
+																		<!--begin::Menu item-->
+																		<div class="menu-item px-3">
+																		<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
+																			<a href="/admin/users/parent-detail/1" class="menu-link px-3">Edit</a>
 																		</div>
-																	</a>
-																</div>
-																<!--end::Avatar-->
-																<!--begin::User details-->
-																<div class="d-flex flex-column">
-																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																	<a href="/admin/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1">Dr. crazy Andrew</a>
-																	<span>max@kt.com</span>
-																</div>
-																<!--begin::User details-->
-															</td>
-															<td>BM1,</td>
-															<td>3.7</td>
-															<td>- Major: Socio cultural anthropology - Certificate: Teaching Certificate</td>
-															<td>
-																<a href="#">Zoom</a>
-															</td>
-															<td class="text-end">
-																<a href="#" class="btn btn-light btn-active-light-primary btn-sm" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">Actions
-																<!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg-->
-																<span class="svg-icon svg-icon-5 m-0">
-																	<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-																		<path d="M11.4343 12.7344L7.25 8.55005C6.83579 8.13583 6.16421 8.13584 5.75 8.55005C5.33579 8.96426 5.33579 9.63583 5.75 10.05L11.2929 15.5929C11.6834 15.9835 12.3166 15.9835 12.7071 15.5929L18.25 10.05C18.6642 9.63584 18.6642 8.96426 18.25 8.55005C17.8358 8.13584 17.1642 8.13584 16.75 8.55005L12.5657 12.7344C12.2533 13.0468 11.7467 13.0468 11.4343 12.7344Z" fill="black"></path>
-																	</svg>
-																</span>
-																<!--end::Svg Icon--></a>
-																<!--begin::Menu-->
-																<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
-																	<!--begin::Menu item-->
-																	<div class="menu-item px-3">
-																	<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																		<a href="/admin/users/parent-detail/1" class="menu-link px-3">Edit</a>
+																		<!--end::Menu item-->
+																		<!--begin::Menu item-->
+																		<div class="menu-item px-3">
+																			<a href="#" class="menu-link px-3" data-kt-users-table-filter="delete_row">Delete</a>
+																		</div>
+																		<!--end::Menu item-->
 																	</div>
-																	<!--end::Menu item-->
-																	<!--begin::Menu item-->
-																	<div class="menu-item px-3">
-																		<a href="#" class="menu-link px-3" data-kt-users-table-filter="delete_row">Delete</a>
-																	</div>
-																	<!--end::Menu item-->
-																</div>
-																<!--end::Menu-->
-															</td>
-															<!--end::Action=-->
-														</tr>
-													
+																	<!--end::Menu-->
+																</td>
+																<!--end::Action=-->
+															</tr>
+														<% end %>
 													
 													</tbody>
 													<!--end::Table body-->
