Teacher 파트 탭을 전부 페이지로 나누었어요. 다른 것들도 이렇게 해야 할 것 같아요

--- a/app/views/teacher/mypage.html.erb
+++ b/app/views/teacher/mypage.html.erb
@@ -352,7 +352,7 @@
 										<%# TODO:: 클래스 하나씩 시작하는 곳 %>
 										<div class="col-md-6 col-xl-4" class="tab-pane show fade active" id="class_schedule" role="tabpanel">
 											<!--begin::Card-->
-											<a href="../../demo4/dist/teacher_class_homework.html" class="card border-hover-primary">
+											<a href="/class/classrom-teacher/2" class="card border-hover-primary">
 												<!--begin::Card header-->
 												<div class="card-header border-0 pt-9">
 													<!--begin::Card Title-->
